Cleans up various spacing and layout issues with tiles.

--- a/themes/experience-engine/assets/styles/base/typography.css
+++ b/themes/experience-engine/assets/styles/base/typography.css
@@ -52,7 +52,8 @@ h1 {
 	}
 }
 
-h2 {
+h2,
+.h2 {
 	font-size: 1.778rem;
 	line-height: 1.353;
 
